[package]
name = "guava"
version = "0.0.1"
edition = "2021"
description = "a fast development web application build with axum"
authors = ["Zerounary <zerounary@163.com>"]
license = "MIT"
keywords = ["web", "codegen", "template"]
repository = "https://github.com/Zerounary/guava.git"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["guava-derive"]


[dependencies]
axum = "0.5.15"
tokio = { version =  "1.20.1", features = ["full"]}

serde_json ={ version = "1.0.85"}
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
anyhow = { version = "1.0.62"}
lazy_static = "1.4.0"
dotenv = { version = "0.15.0"}
itertools = "0.10.2"  

cached = "0.38.0"
moka = "0.9.3"

rbs = "0.1.11"
rbatis = "4.0.35"
rbdc-pg = "0.1.16"

log = "0.4.17"
fast_log = "1.5"

guava-derive ={ path = "./guava-derive"}